<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddProcessoActivity">

    <EditText
        android:id="@+id/edtNomeProcesso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_nome_do_processo"
        android:layout_marginTop="8dp"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_tamanho_do_arquivo_a_processar"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <RadioGroup
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbPequeno"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pequeno"/>

        <RadioButton
            android:id="@+id/rbMedio"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_medio"/>

        <RadioButton
            android:id="@+id/rbGrande"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_grande"/>

    </RadioGroup>

    <LinearLayout
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_cancelar"/>

        <Button
            android:id="@+id/btnCriar"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_criar"/>

    </LinearLayout>

</LinearLayout>